--- a/emacs.org
+++ b/emacs.org
@@ -83,16 +83,22 @@ These are non-interactive library functions useful in other parts of this config
    ((lambda (x) (concat (substring x 0 3) ":" (substring x 3 5)))
     (format-time-string "%z"))))
 
-(defun jw--run-cmd (command &optional buffer-name just-toggle-back-if-current-buffer-matches before-buffer-process-creation after-buffer-process-creation)
+(defun jw--run-cmd (command &optional
+                            buffer-name
+                            just-toggle-back-if-current-buffer-matches
+                            before-buffer-process-creation
+                            after-buffer-process-creation
+                            run-command-always)
   "A wrapper around `async-shell-command'.
 If `buffer-name' already exists, this will just switch to it.
-If `just-toggle-back-if-current-buffer-matches' is `non-nil' then we just switch back to `(other-buffer)'."
+If `just-toggle-back-if-current-buffer-matches' is non-nil then we just switch back to (other-buffer).
+If `run-command-always' is non-nil then we always run the command even if the target process buffer already exists."
   (if (and just-toggle-back-if-current-buffer-matches buffer-name (string= (buffer-name) buffer-name))
       (switch-to-buffer (other-buffer))
-    (if (and buffer-name (get-buffer buffer-name))
+    (if (and buffer-name (get-buffer buffer-name) (not run-command-always))
         (switch-to-buffer buffer-name)
       (let* ((prepared-cmd (string-trim command))
-             (name-for-buffer (or buffer-name (concat "*" prepared-cmd "*")))
+             (name-for-buffer (or buffer-name (concat "*" (replace-regexp-in-string "[\t\n\r]+" " " prepared-cmd) "*")))
              (buffer (get-buffer-create name-for-buffer)))
         (if (string= "" prepared-cmd)
             (message "Empty command name! Did nothing.")
@@ -510,7 +516,7 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), prompt for year/month for calendar d
 
 (defun cmd (command)
   (interactive "sCommand: ")
-  (jw--run-cmd command (format "*%s*" (replace-regexp-in-string "\n" " && " command))))
+  (jw--run-cmd command nil nil nil nil t))
 
 (defun cmd-tmux (command &optional tmux-session)
   (interactive "sCommand: ")
@@ -519,6 +525,15 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), prompt for year/month for calendar d
     (message "Sent to tmux session: %s" ts)))
 
 (defun cmd-dwim (arg &optional command)
+  "Shell command dwim.
+
+M-x `cmd-dwim' will run an async shell command in a new buffer.
+C-u M-x `cmd-dwim' will run a shell command and print the response in the echo area.
+C-u 4 M-x `cmd-dwim' will run a shell command and insert the response at point.
+C-u 8 M-x `cmd-dwim' will send a shell command to the default tmux session using `cmd-tmux'.
+
+If a region is selected, the region will be used as the shell command.
+Otherwise, the shell command must be read from prompt."
   (interactive "P")
   (let ((prepared-cmd (or command (if (region-active-p)
                                       (buffer-substring-no-properties (region-beginning) (region-end))
@@ -528,6 +543,7 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), prompt for year/month for calendar d
           (4 (insert (shell-command-to-string prepared-cmd)))
           (8 (cmd-tmux prepared-cmd))
           (t (message (string-trim (shell-command-to-string prepared-cmd)))))
+      (jw--run-cmd prepared-cmd nil nil)
       (cmd prepared-cmd))))
 
 (defun toggle-window-split ()
@@ -688,6 +704,7 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), prompt for year/month for calendar d
 (global-unset-key (kbd "C-x C-z"))
 
 (global-set-key (kbd "M-!") 'cmd-dwim)
+(global-set-key (kbd "M-&") 'cmd-dwim)
 
 (global-set-key (kbd "C-c M-e") 'eshell-cd-vc-root-dir-or-pwd-otherwise-other-buffer)
 
