--- a/emacs.org
+++ b/emacs.org
@@ -65,6 +65,10 @@ These are non-interactive library functions useful in other parts of this config
 (defun jw--file-lines-to-list (file)
   (split-string (jw--file-lines-to-string file) "\n" t))
 
+(defun jw--write-to-file (string file &optional append)
+  (when (and (file-exists-p file) (not append)) (delete-file file))
+  (append-to-file string nil file))
+
 (defun jw--make-uuid ()
   (downcase (shell-command-to-string "uuidgen | tr -d '\n'")))
 
@@ -83,33 +87,43 @@ These are non-interactive library functions useful in other parts of this config
    ((lambda (x) (concat (substring x 0 3) ":" (substring x 3 5)))
     (format-time-string "%z"))))
 
-(defun jw--run-cmd (command &optional
-                            buffer-name
-                            just-toggle-back-if-current-buffer-matches
-                            before-buffer-process-creation
-                            after-buffer-process-creation)
-  "A wrapper around `make-comint-in-buffer'.
-If `buffer-name' is explicitly provided and already exists, this will just switch to it (useful for long running server processes, for example).
-If `just-toggle-back-if-current-buffer-matches' is non-nil then we just switch back to (other-buffer)."
-  (if (and just-toggle-back-if-current-buffer-matches buffer-name (string= (buffer-name) buffer-name))
-      (switch-to-buffer (other-buffer))
-    (if (and buffer-name (get-buffer buffer-name))
-        (switch-to-buffer buffer-name)
-      (let* ((prepared-cmd (string-trim command))
-             (command-tokens (split-string prepared-cmd))
-             (command-name (car command-tokens))
-             (command-args (cdr command-tokens))
-             (name-for-buffer (or buffer-name (concat "*" (replace-regexp-in-string "[\t\n\r]+" " " prepared-cmd) "*")))
-             (buffer (get-buffer-create name-for-buffer)))
-        (if (string= "" prepared-cmd)
-            (message "Empty command name! Did nothing.")
-          (progn
-            (when before-buffer-process-creation (funcall before-buffer-process-creation))
-            (switch-to-buffer buffer)
-            (apply 'make-comint-in-buffer prepared-cmd buffer command-name nil command-args)
-            (when after-buffer-process-creation (funcall after-buffer-process-creation)))
-          )))))
+(defun jw--make-temporary-script (command)
+  (let* ((temporary-script-relative-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" command))
+         (jw-temporary-script-dir (concat temporary-file-directory "jw-tmp-scripts/"))
+         (temporary-script-absolute-filename (concat jw-temporary-script-dir temporary-script-relative-filename))
+         (script-contents (format "#!/bin/sh\n\ncd %s\n\n%s" (jw--pwd) command)))
+    (unless (file-exists-p jw-temporary-script-dir) (make-directory jw-temporary-script-dir))
+    (jw--write-to-file script-contents temporary-script-absolute-filename)
+    (unless (file-executable-p temporary-script-absolute-filename) (shell-command (format "chmod u+x %s" temporary-script-absolute-filename)))
+    temporary-script-absolute-filename))
 
+(defun jw--run-cmd (command &optional buffer-name before-process-creation after-process-creation)
+  "A wrapper around `make-comint-in-buffer'.
+For commands that have already finished, this will clean up the process buffer and re-run the command.
+For long running processes, this will always toggle back and forth between the process buffer and the other buffer as long as the process is alive."
+  (let* ((prepared-cmd (string-trim command))
+         (command-tokens (split-string prepared-cmd))
+         (command-name (car command-tokens))
+         (command-args (cdr command-tokens))
+         (name-for-buffer (or buffer-name (concat "*" (replace-regexp-in-string "[\t\n\r]+" " " prepared-cmd) "*")))
+         (command-script (jw--make-temporary-script prepared-cmd))
+         (process-is-alive (process-live-p (get-process command-script))))
+    (if (string= "" prepared-cmd)
+        (message "Empty command! Did nothing.")
+      (if (and process-is-alive (string= (buffer-name) name-for-buffer))
+          (switch-to-buffer (other-buffer))
+        (progn
+          (when (and (not process-is-alive) (get-buffer name-for-buffer)) (kill-buffer name-for-buffer))
+          (if (get-buffer name-for-buffer)
+              (switch-to-buffer name-for-buffer)
+            (let ((buffer (get-buffer-create name-for-buffer)))
+              (when before-process-creation (funcall before-process-creation))
+              (switch-to-buffer buffer)
+              (apply 'make-comint-in-buffer command-script buffer command-script nil command-args)
+              (when after-process-creation (funcall after-process-creation))))))
+      (message "Running command %s" prepared-cmd))))
+
+;; todo -- remote tmux sessions?
 (defun jw--run-cmd-tmux (command tmux-session)
   "Create session `tmux-session' if needed, and send `command' to it."
   (call-process "tmux" nil nil nil "new-session" "-d" "-s" tmux-session) ;; this does nothing if the session already exists
@@ -368,7 +382,7 @@ My terminal rc file parses these same files.
 
 (setq wdired-allow-to-change-permissions 'advanced)
 
-(setq dired-listing-switches "-alk")
+(setq dired-listing-switches "-alh")
 
 (add-hook 'after-save-hook 'executable-make-buffer-file-executable-if-script-p)
 
@@ -528,13 +542,13 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), prompt for year/month for calendar d
 (defun cmd-dwim (arg &optional command)
   "Shell command dwim.
 
-M-x `cmd-dwim' will run an async shell command in a new buffer using comint.
+M-x `cmd-dwim' will run an async shell command in a new buffer.
 C-u M-x `cmd-dwim' will run a shell command and print the response in the echo area.
 C-u 4 M-x `cmd-dwim' will run a shell command and insert the response at point.
 C-u 8 M-x `cmd-dwim' will send a shell command to the default tmux session using `cmd-tmux'.
 
-If a region is selected, the region will be used as the shell command.
-Otherwise, the shell command must be read from prompt."
+Interactively, if a region is selected, the region will be used as the shell command.
+Otherwise, the shell command is read from prompt."
   (interactive "P")
   (let ((prepared-cmd (or command (if (region-active-p)
                                       (buffer-substring-no-properties (region-beginning) (region-end))
@@ -544,7 +558,6 @@ Otherwise, the shell command must be read from prompt."
           (4 (insert (shell-command-to-string prepared-cmd)))
           (8 (cmd-tmux prepared-cmd))
           (t (message (string-trim (shell-command-to-string prepared-cmd)))))
-      (jw--run-cmd prepared-cmd nil nil)
       (cmd prepared-cmd))))
 
 (defun toggle-window-split ()
@@ -1099,6 +1112,8 @@ here are some useful rcirc configs to set in the safe `private` location
 (setq org-babel-default-header-args:sh '((:results . "output"))
       org-babel-default-header-args:http '((:pretty . "yes")))
 
+(defconst org-babel-header-args:cmd '((bg . :any) (tmux . :any)))
+
 (defun org-babel-execute:cmd (body params)
   (let* ((bg-option (assoc :bg params))
          (in-bg (and bg-option (not (string= (cdr bg-option) "no"))))
@@ -1215,7 +1230,7 @@ hacky way of using org tables for markdown tables [[http://stackoverflow.com/que
 (defun sonic-pi-server ()
   (interactive)
   (sonic-pi-server-cleanup-process-buffer)
-  (jw--run-cmd "sonic-pi run-server" sonic-pi-server-buffer-name t nil
+  (jw--run-cmd "sonic-pi run-server" sonic-pi-server-buffer-name nil
                '(lambda ()
                   (add-hook 'comint-output-filter-functions 'comint-truncate-buffer t t)
                   (read-only-mode))))
