Re-arranging run-cmd a little better

--- a/emacs.org
+++ b/emacs.org
@@ -105,23 +105,23 @@ For long running processes, this will always toggle back and forth between the p
          (command-tokens (split-string prepared-cmd))
          (command-name (car command-tokens))
          (command-args (cdr command-tokens))
-         (name-for-buffer (or buffer-name (concat "*" (replace-regexp-in-string "[\t\n\r]+" " " prepared-cmd) "*")))
-         (command-script (jw--make-temporary-script prepared-cmd))
-         (process-is-alive (process-live-p (get-process command-script))))
+         (name-for-buffer (or buffer-name (concat "*" (replace-regexp-in-string "[\t\n\r]+" " " prepared-cmd) "*"))))
     (if (string= "" prepared-cmd)
         (message "Empty command! Did nothing.")
-      (if (and process-is-alive (string= (buffer-name) name-for-buffer))
-          (switch-to-buffer (other-buffer))
-        (progn
-          (when (and (not process-is-alive) (get-buffer name-for-buffer)) (kill-buffer name-for-buffer))
-          (if (get-buffer name-for-buffer)
-              (switch-to-buffer name-for-buffer)
-            (let ((buffer (get-buffer-create name-for-buffer)))
-              (when before-process-creation (funcall before-process-creation))
-              (switch-to-buffer buffer)
-              (apply 'make-comint-in-buffer command-script buffer command-script nil command-args)
-              (when after-process-creation (funcall after-process-creation))))))))
-  (message nil))
+      (let* ((command-script (jw--make-temporary-script prepared-cmd))
+             (process-is-alive (process-live-p (get-process command-script))))
+        (if (and process-is-alive (string= (buffer-name) name-for-buffer))
+            (switch-to-buffer (other-buffer))
+          (progn
+            (when (and (not process-is-alive) (get-buffer name-for-buffer)) (kill-buffer name-for-buffer))
+            (if (get-buffer name-for-buffer)
+                (switch-to-buffer name-for-buffer)
+              (let ((buffer (get-buffer-create name-for-buffer)))
+                (when before-process-creation (funcall before-process-creation))
+                (switch-to-buffer buffer)
+                (apply 'make-comint-in-buffer command-script buffer command-script nil command-args)
+                (when after-process-creation (funcall after-process-creation))))))
+        (message nil)))))
 
 ;; todo -- remote tmux sessions?
 (defun jw--run-cmd-tmux (command tmux-session)
