--- a/emacs.org
+++ b/emacs.org
@@ -66,8 +66,13 @@ These are non-interactive library functions useful in other parts of this config
   (split-string (jw--file-lines-to-string file) "\n" t))
 
 (defun jw--write-to-file (string file &optional append)
-  (when (and (file-exists-p file) (not append)) (delete-file file))
-  (append-to-file string nil file))
+  (let ((msg (current-message)))
+    (when (and (file-exists-p file) (not append)) (delete-file file))
+    (append-to-file string nil file)
+    (when msg (message msg))))
+
+(defun jw--substr-first-n (string n)
+  (if (> (length string) n) (substring string 0 n) string))
 
 (defun jw--make-uuid ()
   (downcase (shell-command-to-string "uuidgen | tr -d '\n'")))
@@ -87,41 +92,31 @@ These are non-interactive library functions useful in other parts of this config
    ((lambda (x) (concat (substring x 0 3) ":" (substring x 3 5)))
     (format-time-string "%z"))))
 
-(defun jw--make-temporary-script (command)
-  (let* ((temporary-script-relative-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" command))
-         (jw-temporary-script-dir (concat temporary-file-directory "jw-tmp-scripts/"))
-         (temporary-script-absolute-filename (concat jw-temporary-script-dir temporary-script-relative-filename))
-         (script-contents (format "#!/bin/sh\n\ncd %s\n\n%s" (jw--pwd) command)))
-    (unless (file-exists-p jw-temporary-script-dir)
-      (make-directory jw-temporary-script-dir))
-    (jw--write-to-file script-contents temporary-script-absolute-filename)
-    (chmod temporary-script-absolute-filename #o744)
-    temporary-script-absolute-filename))
-
-(defun jw--run-cmd (command &optional buffer-name before-process-creation after-process-creation)
+(defun jw--run-cmd (command &optional process-name before-process-creation after-process-creation)
   "A wrapper around `make-comint-in-buffer'.
 For commands that have already finished, this will clean up the process buffer and re-run the command.
 For long running processes, this will always toggle back and forth between the process buffer and the other buffer as long as the process is alive."
   (let* ((prepared-cmd (string-trim command))
-         (command-tokens (split-string prepared-cmd))
-         (command-name (car command-tokens))
-         (command-args (cdr command-tokens))
-         (name-for-buffer (or buffer-name (concat "*" (replace-regexp-in-string "[\t\n\r]+" " " prepared-cmd) "*"))))
+         (cmd-process-name (or process-name (replace-regexp-in-string "[\t\n\r]+" " " (jw--substr-first-n prepared-cmd 100))))
+         (cmd-buffer-name (format "*%s*" cmd-process-name)))
     (if (string= "" prepared-cmd)
-        (message "Empty command! Did nothing.")
-      (let* ((command-script (jw--make-temporary-script prepared-cmd))
-             (process-is-alive (process-live-p (get-process command-script))))
-        (if (and process-is-alive (string= (buffer-name) name-for-buffer))
-            (switch-to-buffer (other-buffer))
-          (progn
-            (when (and (not process-is-alive) (get-buffer name-for-buffer)) (kill-buffer name-for-buffer))
-            (if (get-buffer name-for-buffer)
-                (switch-to-buffer name-for-buffer)
-              (let ((buffer (get-buffer-create name-for-buffer)))
-                (when before-process-creation (funcall before-process-creation))
-                (switch-to-buffer buffer)
-                (apply 'make-comint-in-buffer command-script buffer command-script nil command-args)
-                (when after-process-creation (funcall after-process-creation))))))))))
+        (message "Empty command! Doing nothing.")
+      (if (process-live-p (get-process cmd-process-name))
+          (if (string= (buffer-name) cmd-buffer-name) (switch-to-buffer (other-buffer)) (switch-to-buffer cmd-buffer-name))
+        (let* ((tmp-script-dir "/tmp/emacs-jw-run-cmd/")
+               (tmp-script-rel-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" cmd-process-name))
+               (tmp-script-abs-filename (concat tmp-script-dir tmp-script-rel-filename))
+               (tmp-script-exec-program (or (executable-find "zsh") (executable-find "bash") (executable-find "sh")))
+               (tmp-script-contents (format "#!%s\n\ncd %s\n\n%s" tmp-script-exec-program (jw--pwd) prepared-cmd)))
+          (when (get-buffer cmd-buffer-name) (kill-buffer cmd-buffer-name))
+          (unless (file-exists-p tmp-script-dir) (make-directory tmp-script-dir))
+          (jw--write-to-file tmp-script-contents tmp-script-abs-filename)
+          (unless (file-executable-p tmp-script-abs-filename) (chmod tmp-script-abs-filename #o744))
+          (let ((process-buffer (get-buffer-create cmd-buffer-name)))
+            (when before-process-creation (funcall before-process-creation))
+            (apply 'make-comint-in-buffer cmd-process-name process-buffer tmp-script-abs-filename nil nil)
+            (when after-process-creation (funcall after-process-creation))
+            (switch-to-buffer process-buffer)))))))
 
 (defun jw--run-cmd-tmux (command tmux-session)
   "Create session `tmux-session' if needed, and send `command' to it."
@@ -1216,26 +1211,25 @@ hacky way of using org tables for markdown tables [[http://stackoverflow.com/que
 (require 'ob)
 (require 'subr-x) ;; string-trim
 
-(defvar sonic-pi-server-buffer-name "*sonic pi*")
-
 (defun sonic-pi-server-running-p ()
   (string= (string-trim (shell-command-to-string "sonic-pi check-server")) "Sonic Pi is running"))
 
 (defun sonic-pi-server-cleanup-process-buffer ()
   (interactive)
-  (when (and (not (sonic-pi-server-running-p)) (get-buffer sonic-pi-server-buffer-name))
-    (kill-buffer sonic-pi-server-buffer-name)))
+  (when (and (not (sonic-pi-server-running-p)) (get-buffer "*sonic pi*"))
+    (kill-buffer "*sonic pi*")))
 
 (defun sonic-pi-server ()
   (interactive)
   (sonic-pi-server-cleanup-process-buffer)
-  (jw--run-cmd "sonic-pi run-server" sonic-pi-server-buffer-name nil
+  (jw--run-cmd "sonic-pi run-server" "sonic pi" nil
                '(lambda ()
                   (add-hook 'comint-output-filter-functions 'comint-truncate-buffer t t)
                   (read-only-mode))))
 
 (defun sonic-pi-server-start-if-needed ()
   (unless (sonic-pi-server-running-p)
+    (message "Sonic Pi server not running anywhere. Starting up...")
     (save-excursion
       (sonic-pi-server)
       (sleep-for 2)
