Sourcing user profile for cmd exec program

--- a/emacs.org
+++ b/emacs.org
@@ -107,7 +107,10 @@ For long running processes, this will always toggle back and forth between the p
                (tmp-script-rel-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" cmd-process-name))
                (tmp-script-abs-filename (concat tmp-script-dir tmp-script-rel-filename))
                (tmp-script-exec-program (or (executable-find "zsh") (executable-find "bash") (executable-find "sh")))
-               (tmp-script-contents (format "#!%s\n\ncd %s\n\n%s" tmp-script-exec-program (jw--pwd) prepared-cmd)))
+               (tmp-script-source-profile (cond ((string-match "zsh$" tmp-script-exec-program) "source $HOME/.zshrc")
+                                                ((string-match "bash$" tmp-script-exec-program) "source $HOME/.bashrc")
+                                                (t "")))
+               (tmp-script-contents (format "#!%s\n\n%s\n\ncd %s\n\n%s" tmp-script-exec-program tmp-script-source-profile (jw--pwd) prepared-cmd)))
           (when (get-buffer cmd-buffer-name) (kill-buffer cmd-buffer-name))
           (unless (file-exists-p tmp-script-dir) (make-directory tmp-script-dir))
           (jw--write-to-file tmp-script-contents tmp-script-abs-filename)
